Updated: Post method

--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -73,6 +73,7 @@
     </compilers>
   </system.codedom>
     <connectionStrings>
-		<add name="connectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\user\source\repos\WebAPI\WebAPI\App_Data\EmployeeDB.mdf;Integrated Security=True"/>
+		<!--<add name="connectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\user\source\repos\WebAPI\WebAPI\App_Data\EmployeeDB.mdf;Integrated Security=True"/>-->
+		<add name="connectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\WebApplications\WebAPI\WebAPI\App_Data\EmployeeDB.mdf;Integrated Security=True"/>
 	</connectionStrings>
 </configuration>
